# apogee_control

./: .gitignore  Apogee_control.config  Apogee_control.files  Apogee_control.includes  CMakeLists.txt  README  README-func  TODO  airmass.c  am.c  bta_print.c  bta_print.h  bta_shdata.c  bta_shdata.h  camtools.c  camtools.h  defhdrs.c  defhdrs.h  macros.c  macros.h  netcamID  takepic.c  takepic.h  usage.c  usage.h
apogee_C_wrapper/: CMakeLists.txt  README
apogee_C_wrapper/src/: 60-apogee.rules  apogeec.pc.in  libapogee.cpp  libapogee.h  test.c  test_wheel.c
doc/: doc.tex
ebuild/sci-astronomy/apogee_control/: Manifest  apogee_control-0.1.ebuild
ebuild/sci-libs/apogeec/: Manifest  apogeec-0.1.ebuild
ebuild/sci-libs/libapogee/: Manifest  libapogee-3.0.3179.ebuild
ebuild/sci-libs/libsla/: Manifest  libsla-7.0.0.ebuild
image_view_module/: CMakeLists.txt  events.c  events.h  imageview.c  imageview.h  list.c
image_view_module/locale/ru/: messages.po  ru.po
image_view_module/locale/ru/LC_MESSAGES/: openglview.mo
libapogee/: libapogee-3.0.2865-32bit.tgz  libapogee-3.0.2865-x86_64.tgz
locale/ru/: messages.po  ru.po
locale/ru/LC_MESSAGES/: apogee_control.mo
slalib/: Makefile  README  sla.pc  slalib.h
